[gd_scene load_steps=3 format=3 uid="uid://cv5loklt3i5d5"]

[ext_resource type="Script" uid="uid://b5cg5euqmr6ip" path="res://match.gd" id="1_2n26j"]
[ext_resource type="PackedScene" uid="uid://duwoi70lglhbr" path="res://arena.tscn" id="1_7y1jj"]

[node name="Match" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2n26j")

[node name="GameLayer" type="CanvasLayer" parent="."]

[node name="SubViewportContainer" type="SubViewportContainer" parent="GameLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
stretch = true

[node name="SubViewport" type="SubViewport" parent="GameLayer/SubViewportContainer"]
handle_input_locally = false
size = Vector2i(1152, 648)
render_target_update_mode = 4

[node name="Arena" parent="GameLayer/SubViewportContainer/SubViewport" instance=ExtResource("1_7y1jj")]

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="UILayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UILayer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="UILayer/Control/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="UILayer/Control/HBoxContainer/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UILayer/Control/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="UILayer/Control/HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Time:"

[node name="TimeLabel" type="Label" parent="UILayer/Control/HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="UILayer/Control/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="UILayer/Control/HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Player: "

[node name="PlayerArea" type="Label" parent="UILayer/Control/HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="UILayer/Control/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="UILayer/Control/HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Cherry: "

[node name="RedNpcArea" type="Label" parent="UILayer/Control/HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer4" type="HBoxContainer" parent="UILayer/Control/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="UILayer/Control/HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
text = "Orange: "

[node name="OrangeNpcArea" type="Label" parent="UILayer/Control/HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer4"]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer5" type="HBoxContainer" parent="UILayer/Control/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="UILayer/Control/HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer5"]
layout_mode = 2
text = "Grape: "

[node name="PurpleNpcArea" type="Label" parent="UILayer/Control/HBoxContainer/MarginContainer/VBoxContainer/HBoxContainer5"]
unique_name_in_owner = true
layout_mode = 2
